# CS475m-Computer-Graphics

./: README.md  gitignore
Assignment1/code/: Makefile  README.html  README.md  e1.txt  mydraw  mydraw.cpp  mydraw_class.cpp  mydraw_class.hpp  references.txt  related_functions.cpp  saved_drawing.txt
Assignment2/Assignment2_1/: all_lists.cpp  bicycle  bicycle.cpp  bicycle_class.cpp  bicycle_class.hpp
Assignment2/arka/: all_lists.cpp  bicycle  bicycle.cpp  bicycle_class.cpp  bicycle_class.hpp
Assignment2/sudeep/: Makefile  all_lists.cpp  bicycle  bicycle.cpp  bicycle_class.cpp
Assignment2_2/Assgn2_2/: Makefile  README.html  all_lighting.cpp  lighting  lighting.cpp
Assignment2_2/Assgn2_2/bicycle/: Makefile  all_lists.cpp  bicycle  bicycle.cpp  bicycle_class.cpp  bicycle_class.hpp
Assignment2_2/arka/: Makefile_backup  all_lighting.cpp  lighting  lighting.cpp
Assignment2_2/arka/bicycle/: all_lists.cpp  bicycle  (+1 more)
Assignment2_2/sudeep/: Makefile  a.out  all_lighting.cpp  light_online.cpp  lighting  lighting.cpp  lighting_class.cpp
Assignment2_2/sudeep1/: README  a.out  all_lighting.cpp  lighting  lighting.cpp  lighting_class.cpp  lighting_class.hpp
Assignment2_3/Assignment2_3/: CMakeLists.txt  Makefile.bak  README  README.html  all_animate.cpp  all_lighting.cpp  animate  animate.cpp  animate_class.cpp  animate_class.hpp  convert_img_to_vid.sh  err1.txt  img_3.tga  key_frames.txt
Assignment2_3/Assignment2_3/bicycle/: Makefile  all_lists.cpp  bicycle_class.cpp  bicycle_class.hpp
sudeep/: mydraw.cpp  mydraw_class.cpp  mydraw_class.hpp  related_functions.cpp
(+7 files in other folders)
